--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs",
-    "deploy": "npm run docs:build && gh-pages -d docs/.vitepress/dist"
+    "deploy": "npm run build && gh-pages -d docs/.vitepress/dist"
   }
 }
